--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.15.1",
     "mongoose-paginate-v2": "^1.9.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
@@ -40,6 +41,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^24.0.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "ts-node-dev": "^2.0.0",
