--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,23 @@
 version: '3.8'
 
 services:
-  # MongoDB Database
-  mongodb:
-    image: mongo:7.0
-    container_name: golder_hr_mongodb
-    restart: unless-stopped
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME:-admin}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD:-password123}
-      MONGO_INITDB_DATABASE: ${MONGO_DATABASE:-golder_hr}
-    ports:
-      - "${MONGO_PORT:-27017}:27017"
-    volumes:
-      - mongodb_data:/data/db
-      - mongodb_config:/data/configdb
-      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-    networks:
-      - golder_hr_network
-    healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 30s
-
   # Node.js Backend Application
   backend:
     build:
       context: .
       dockerfile: Dockerfile
-      target: production
+      target: ${NODE_ENV:-development}
     container_name: golder_hr_backend
     restart: unless-stopped
     ports:
       - "${APP_PORT:-3000}:3000"
     environment:
-      - NODE_ENV=${NODE_ENV:-production}
+      - NODE_ENV=${NODE_ENV:-development}
       - PORT=3000
-      - MONGO_URL=mongodb://${MONGO_ROOT_USERNAME:-admin}:${MONGO_ROOT_PASSWORD:-password123}@mongodb:27017/${MONGO_DATABASE:-golder_hr}?authSource=admin
-      - JWT_SECRET=${JWT_SECRET:-your-super-secret-jwt-key-change-this-in-production}
+      - MONGO_URL=${MONGO_URL}
+      - JWT_SECRET=${JWT_SECRET}
       - JWT_EXPIRES_IN=${JWT_EXPIRES_IN:-7d}
-      - COOKIE_SECRET=${COOKIE_SECRET:-your-cookie-secret-change-this}
+      - COOKIE_SECRET=${COOKIE_SECRET}
       - EMAIL_HOST=${EMAIL_HOST}
       - EMAIL_PORT=${EMAIL_PORT:-587}
       - EMAIL_USER=${EMAIL_USER}
@@ -54,18 +30,14 @@ services:
       - FIREBASE_PRIVATE_KEY=${FIREBASE_PRIVATE_KEY}
       - FIREBASE_CLIENT_EMAIL=${FIREBASE_CLIENT_EMAIL}
       - FIREBASE_CLIENT_ID=${FIREBASE_CLIENT_ID}
-      - REDIS_URL=redis://redis:6379
       - FACE_VERIFICATION_URL=http://localhost:5000
       - BCRYPT_ROUNDS=${BCRYPT_ROUNDS:-12}
       - CORS_ORIGIN=${CORS_ORIGIN:-*}
-    depends_on:
-      mongodb:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
     volumes:
       - uploads_data:/app/uploads
       - ./logs:/app/logs
+      # Mount source code for hot-reload
+      - ./src:/app/src
     networks:
       - golder_hr_network
     healthcheck:
@@ -75,33 +47,7 @@ services:
       retries: 3
       start_period: 60s
 
-  # Redis for caching and sessions
-  redis:
-    image: redis:7-alpine
-    container_name: golder_hr_redis
-    restart: unless-stopped
-    ports:
-      - "${REDIS_PORT:-6379}:6379"
-    volumes:
-      - redis_data:/data
-    networks:
-      - golder_hr_network
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-redis123}
-    healthcheck:
-      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-
-
 volumes:
-  mongodb_data:
-    driver: local
-  mongodb_config:
-    driver: local
-  redis_data:
-    driver: local
   uploads_data:
     driver: local
 
