--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "HRM and CRM backend with word management",
   "dependencies": {
     "@types/node-cron": "^3.0.11",
+    "@types/socket.io": "^3.0.1",
     "axios": "^1.10.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.7.0",
@@ -33,6 +34,7 @@
     "multer": "^2.0.1",
     "node-cron": "^4.1.1",
     "nodemailer": "^7.0.3",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
