--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer": "^2.0.1",
     "node-cron": "^4.1.1",
     "nodemailer": "^7.0.3",
+    "serverless-http": "^3.2.0",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
